# picar-x

./: .gitignore  README.md  install.py  pyproject.toml
blocklypi/: app.py
blocklypi/static/blockly/: package.json  robotcar.js
blocklypi/static/blockly/core/renderers/geras/measurables/: inline_input.d.ts  statement_input.d.ts
blocklypi/static/blockly/core/renderers/zelos/measurables/: bottom_row.d.ts  inputs.d.ts  row_elements.d.ts  top_row.d.ts
blocklypi/static/css/: index.css
blocklypi/static/js/: index.js
blocklypi/templates/: index.html
calibration/: calibration.py
control/: test.py
example/: 4.avoiding_obstacles.py  avoiding_obstacles.py  keyboard_control.ipynb  keyboard_control.py  minecart_plus.py  move.ipynb  move.py  test_grayscale.py  testing.ipynb  tts_example.ipynb  video_car.py
example/calibration/: calibration.py
example/~/picar-x/: picar-x.conf
examples/: 1.move.py
examples/~/picar-x/: picar-x.conf
picarx/: picarx.py
picarx.egg-info/: PKG-INFO  SOURCES.txt
picarx/.ipynb_checkpoints/: picarx-checkpoint.py
video_control/: app.py
video_control/templates/: index.html
workspace/: obstacle_avoidance.ipynb  test.py
workspace/~/picar-x/: picar-x.conf
