[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picarx"
authors = [
  { name = "justinbetabox", email = "justin@betaboxlearning.com" },
]
description = "Picarx gait Library for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
]
keywords = ["python", "raspberry pi", "GPIO", "sunfounder"]

dependencies = [
    "readchar"
]

dynamic = ["version"]

[tool.setuptools]
packages = ["picarx"]

[project.urls]
Homepage = "https://github.com/justinbetabox/picar-x"

[tool.setuptools.dynamic]
version = {attr = "picarx.version.__version__"}